--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -152,7 +152,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\CPG_InputDelegator.cpp" />
     <ClCompile Include="..\Classes\CPG_InputKeyMap.cpp" />
-    <ClCompile Include="..\Classes\CPG_InputKeyViewer.cpp" />
+    <ClCompile Include="..\Classes\CPG_InputTest_KeyViewer.cpp" />
     <ClCompile Include="..\Classes\CPG_InputTest_KeyboardInputObserver.cpp" />
     <ClCompile Include="..\Classes\CPG_Input_AllowedKeys.cpp" />
     <ClCompile Include="..\Classes\CPG_Input_BasicCollector.cpp" />
@@ -174,7 +174,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\CPG_InputDelegator.h" />
     <ClInclude Include="..\Classes\CPG_InputKeyMap.h" />
-    <ClInclude Include="..\Classes\CPG_InputKeyViewer.h" />
+    <ClInclude Include="..\Classes\CPG_InputTest_KeyViewer.h" />
     <ClInclude Include="..\Classes\CPG_InputTest_KeyboardInputObserver.h" />
     <ClInclude Include="..\Classes\CPG_Input_AllowedKeys.h" />
     <ClInclude Include="..\Classes\CPG_Input_BasicCollector.h" />
