--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -168,7 +168,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Research_Input_ConfigedKeysTestScene.cpp" />
     <ClCompile Include="..\Classes\Research_Input_RootScene.cpp" />
     <ClCompile Include="..\Classes\Research_Setting.cpp" />
-    <ClCompile Include="..\Classes\RootScene.cpp" />
+    <ClCompile Include="..\Classes\PlayGroundScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -191,7 +191,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Research_Input_ConfigedKeysTestScene.h" />
     <ClInclude Include="..\Classes\Research_Input_RootScene.h" />
     <ClInclude Include="..\Classes\Research_Setting.h" />
-    <ClInclude Include="..\Classes\RootScene.h" />
+    <ClInclude Include="..\Classes\PlayGroundScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
