add scene : Research/animation_callback

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="..\Classes\Research_Animation_ListScene.cpp">
       <Filter>src\scene\animation</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Research_Animation_CallbackScene.cpp">
+      <Filter>src\scene\animation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -174,6 +177,9 @@
       <Filter>src\scene\animation</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Research_Animation_ListScene.h">
+      <Filter>src\scene\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Research_Animation_CallbackScene.h">
       <Filter>src\scene\animation</Filter>
     </ClInclude>
   </ItemGroup>
